<resources>

    <string name="app_name">Puzzle</string>
    <string name="music_state">声音状态</string>
    <string name="music_operation">开启/关闭/声音</string>
    <string name="music_audio">减少/放大音量</string>
    <string name="music_show">音量显示</string>
    <string name="music_back">返回</string>
    <string name="order_play">顺序播放</string>
    <string name="single_loop">单曲循环</string>
    <string name="select_img">请选择图片</string>

</resources>

