<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_state"
            android:textSize="@dimen/txt_size" />

        <ToggleButton
            android:id="@+id/btn_audio_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_operation" />

        <Button
            android:id="@+id/btn_music_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/music_on" />

        <Button
            android:id="@+id/btn_music_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/music_off" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_audio" />

        <Button
            android:id="@+id/btn_music_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/music_up" />

        <Button
            android:id="@+id/btn_music_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/music_down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_show" />

        <SeekBar
            android:id="@+id/volume_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:max="100" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_back_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_back" />

</LinearLayout>